@startuml

class App{
+ getPromiseHistoryClient() : PromiseHistoryClient
}

class PromiseHistoryClient {
- getPromiseHistoryByOrderIdActivity : GetPromiseHistoryByOrderIdActivity

+ getPromiseHistoryByOrderId(orderId : String) : PromiseHistory
}

class GetPromiseHistoryByOrderIdActivity {
- orderDao : ReadOnlyDao<String, Order>
- promiseDao : ReadOnlyDao<String, Promise[]>

+ getPromiseHistoryByOrderId(orderId : String) : PromiseHistory
}

class OrderDao {
- omaClient : OrderManipulationAuthorityClient

+ get(orderId : String) : Order
- convertToOrderItem(orderResultItem : OrderResultItem) : OrderItem
}

class PromiseDao {
- dpsClient : DeliveryPromiseServiceClient
- omaClient : OrderManipulationAuthorityClient

+ get (customerOrderItemId : String) : Promise[]
}

interface ReadOnlyDao {
+ get(orderId : I)
}

class OrderManipulationAuthorityClient {
- omaService : OrderManipulationAuthority

+ getCustomerOrderByOrderId(orderId : String) : OrderResult
+ getCustomerOrderItemByOrderItemId(orderItemId : String) : OrderResultItem
}

class DeliveryPromiseServiceClient {
- dpService : DeliveryPromiseService

+ getDeliveryPromiseByOrderItemId(customerOrderItemId : String) : Promise
}

App -> PromiseHistoryClient
PromiseHistoryClient *-- GetPromiseHistoryByOrderIdActivity

GetPromiseHistoryByOrderIdActivity o--> OrderDao
GetPromiseHistoryByOrderIdActivity o--> PromiseDao
OrderDao .|> ReadOnlyDao
ReadOnlyDao <|. PromiseDao
PromiseDao o-> DeliveryPromiseServiceClient
PromiseDao o-- OrderManipulationAuthorityClient
OrderDao o-- OrderManipulationAuthorityClient
OrderResult <.. OrderManipulationAuthorityClient
OrderDao <.. OrderResult
PromiseDao <.. OrderResult
OrderItem -* Order
Order --* OrderDao
Order .> GetPromiseHistoryByOrderIdActivity
OrderManipulationAuthorityClient .> OrderResultItem
PromiseDao <.. OrderResultItem
Promise <.. DeliveryPromiseServiceClient
Promise .> PromiseDao
Promise <.. PromiseDao
GetPromiseHistoryByOrderIdActivity <. Promise
PromiseHistory <. GetPromiseHistoryByOrderIdActivity
PromiseHistoryClient <. PromiseHistory

@enduml